--- a/templates/listar-filmes.html
+++ b/templates/listar-filmes.html
@@ -38,7 +38,7 @@
               <img src="{{filme.imagem_url}}" alt="{{filme.nome}}">
             </td>
             <td>
-              <a href="/read/{{filme.id}}/{{filme.nome}}" class="botao">Visualizar</a>
+              <a href="/read/{{filme.id}}" class="botao">Visualizar</a>
             </td>
           </tr>
         {% endfor %}
